# Week-9-Final-Project

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements_extended.txt
data/clean/: Cleaned_sample_project.ipynb  Cleaning_sample.ipynb
notebooks/: Cleaning_sample.ipynb  Final-Project-work.ipynb  Untitled.ipynb  gradient_boosting_fraud_model.pkl
